--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-plotly
-openpyxl
-st_aggrid
+streamlit==1.51.0
+pandas==2.3.3
+plotly==6.3.1
+openpyxl==3.1.5
+streamlit-aggrid==0.3.4
